--- a/plugins/basename/plugin.spec.yaml
+++ b/plugins/basename/plugin.spec.yaml
@@ -3,12 +3,19 @@ extension: plugin
 products: [insightconnect]
 name: basename
 title: Basename
-description: This plugin is used to get the last item of a file path or URL using Python's basename utility
-version: 1.1.0
+description: This plugin is used to get the last item of a file path or URL using Python's Basename utility
+version: 1.1.1
 vendor: rapid7
 support: community
+supported_versions: ["Python 3.38"]
+sdk:
+  type: full
+  version: 5
+  user: nobody
 status: []
 cloud_ready: true
+key_features:
+  - Obtain Basename of a file path or URL.
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/basename
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
@@ -36,3 +43,4 @@ actions:
         description: Basename result
         type: string
         required: false
+        example: "text.txt"
