fixed path issue

--- a/.github/workflows/tier_one_coverage.yml
+++ b/.github/workflows/tier_one_coverage.yml
@@ -33,6 +33,7 @@ jobs:
           do
             cd $plugin
             echo $plugin
+            workingDir=pwd
             
             # Creating venv so we can install required libraries and later delete them to avoid conflicts
             python3 -m venv venv
@@ -56,7 +57,8 @@ jobs:
               PERCENTAGE=$(echo $output | grep TOTAL | awk '{print $NF}')
             fi
             
-            cd ../
+            # This is the same as ../ If a plugin does not have unit_tests folder ../ will mess up the path 
+            cd workingDir
             
             # Writing plugin name and coverage percentage to file
             echo "$plugin, $PERCENTAGE" >> ../../coverageDir/coverage.csv
