--- a/plugins/basename/plugin.spec.yaml
+++ b/plugins/basename/plugin.spec.yaml
@@ -4,9 +4,14 @@ products: [insightconnect]
 name: basename
 title: Basename
 description: This plugin is used to get the last item of a file path or URL using Python's basename utility
-version: 1.1.0
+version: 1.1.1
 vendor: rapid7
 support: community
+supported_versions: ["Python 3.38"]
+sdk:
+  type: full
+  version: 5
+  user: nobody
 status: []
 cloud_ready: true
 resources:
@@ -36,3 +41,4 @@ actions:
         description: Basename result
         type: string
         required: false
+        example: "text.txt"
