--- a/.github/workflows/unit_test_coverage.yml
+++ b/.github/workflows/unit_test_coverage.yml
@@ -28,41 +28,41 @@ jobs:
           for plugin in ${{ secrets.PLUGIN_COVERAGE }}
           do
             cd $plugin
-            echo $plugin
-            workingDir=$(pwd)
+            echo $plugin            
             
-            # Creating venv so we can install required libraries and later delete them to avoid conflicts
-            python3 -m venv venv
-            source venv/bin/activate
-          
-            # Installing previously mentioned libraries
-            # setuptools is version pinned here to avoid an import compatibility issue with 2to3
-            pip3 install setuptools==41.2.0 --no-cache-dir --disable-pip-version-check
-            pip3 install coverage insightconnect_plugin_runtime -r requirements.txt --no-cache-dir --disable-pip-version-check
+            # checking if plugin has unit tests. if not percentage set to 0 and skip everything else.
+            if [ ! -d "unit_test" ]; then
+              PERCENTAGE="0%"
+              echo "No Unit Test Found."
+            else
+              # Creating venv so we can install required libraries and later delete them to avoid conflicts
+              python3 -m venv venv
+              source venv/bin/activate
             
-            # Exporting PYTHONPATH to plugins unit test directory so all imports are found
-            export PYTHONPATH=$(pwd)
+              # Installing previously mentioned libraries
+              # setuptools is version pinned here to avoid an import compatibility issue with 2to3
+              pip3 install setuptools==41.2.0 --no-cache-dir --disable-pip-version-check
+              pip3 install coverage insightconnect_plugin_runtime -r requirements.txt --no-cache-dir --disable-pip-version-check
+              
+              # Exporting PYTHONPATH to plugins unit test directory so all imports are found
+              export PYTHONPATH=$(pwd)
           
-            cd unit_test
-           
-            # Running Coverage. If no unit tests are found default coverage to 0%
-            coverage run -m unittest *
-            PERCENTAGE="0%"
-            output=$(python3 -m coverage report --data-file=$data_file)
-            if [ "$output" != "No data to report." ]
-            then
+              # Running Coverage and collecting total coverage 
+              cd unit_test
+              coverage run -m unittest *
+              output=$(python3 -m coverage report --data-file=$data_file)
               PERCENTAGE=$(echo $output | grep TOTAL | awk '{print $NF}')
+              cd ../
             fi
-            
-            # This is the same as ../ If a plugin does not have unit_tests folder ../ will mess up the path 
-            cd $workingDir
             
             # Writing plugin name and coverage percentage to file
             echo "$plugin, $PERCENTAGE" >> ../../coverageDir/coverage.csv
             
-            # Deactivating and deleting venv to prepare for next plugin
-            deactivate
-            rm -r venv
+            # Deactivating and deleting venv to prepare for next plugin if exists TODO
+            if [ -d "venv" ]; then
+              deactivate
+              rm -r venv
+            fi
             cd ../
           done
 
