--- a/plugins/thehive/Dockerfile
+++ b/plugins/thehive/Dockerfile
@@ -3,10 +3,6 @@ FROM rapid7/insightconnect-python-3-38-plugin:5
 LABEL organization=rapid7
 LABEL sdk=python
 
-ENV SSL_CERT_FILE /etc/ssl/certs/ca-certificates.crt
-ENV SSL_CERT_DIR /etc/ssl/certs
-ENV REQUESTS_CA_BUNDLE  /etc/ssl/certs/ca-certificates.crt
-
 WORKDIR /python/src
 
 ADD ./plugin.spec.yaml /plugin.spec.yaml
@@ -19,7 +15,6 @@ ADD . /python/src
 RUN	python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
-# Needed for ssl
-USER root
+USER nobody
 
 ENTRYPOINT ["/usr/local/bin/komand_thehive"]
