enable multiple inputs for get endpoint data

--- a/plugins/trendmicro_visionone/plugin.spec.yaml
+++ b/plugins/trendmicro_visionone/plugin.spec.yaml
@@ -4,7 +4,7 @@ products: [ insightconnect ]
 name: trendmicro_visionone
 title: Trend Micro Vision One
 description: Trend Micro Vision One is an enhanced threat defense platform, surpassing standard XDR solutions. It offers comprehensive detection and response across various security layers and automates data correlation for rapid response, effectively preventing most attacks
-version: 2.0.0
+version: 1.0.2
 supported_versions: [ "Trend Micro Vision One API v3" ]
 vendor: trendmicro
 support: community
@@ -642,14 +642,12 @@ triggers:
         type: boolean
         description: If script should wait until the task is finished before returning the result (enabled by default)
         required: true
-        default: true
         example: true
       poll_time_sec:
         title: Poll Time in Seconds
         type: float
         description: Maximum time to wait for the result to be available
         required: false
-        default: 30
         example: 15.5
       interval:
         title: Interval
@@ -1076,14 +1074,12 @@ actions:
         type: boolean
         description: If script should wait until the task is finished before returning the result (enabled by default)
         required: true
-        default: true
         example: true
       poll_time_sec:
         title: Poll Time in Seconds
         type: float
         description: Maximum time to wait for the result to be available
         required: false
-        default: 30
         example: 15.5
     output:
       id:
@@ -1180,14 +1176,12 @@ actions:
         type: boolean
         description: If script should wait until the task is finished before returning the result (enabled by default)
         required: true
-        default: true
         example: true
       poll_time_sec:
         title: Poll Time in Seconds
         type: float
         description: Maximum time to wait for the result to be available
         required: false
-        default: 30
         example: 15.5
     output:
       status:
@@ -1363,14 +1357,12 @@ actions:
         type: boolean
         description: If script should wait until the task is finished before returning the result (enabled by default)
         required: true
-        default: true
         example: true
       poll_time_sec:
         title: Poll Time in Seconds
         type: float
         description: Maximum time to wait for the result to be available
         required: false
-        default: 30
         example: 15.5
     output:
       file:
@@ -1397,14 +1389,12 @@ actions:
         type: boolean
         description: If script should wait until the task is finished before returning the result (enabled by default)
         required: true
-        default: true
         example: true
       poll_time_sec:
         title: Poll Time in Seconds
         type: float
         description: Maximum time to wait for the result to be available
         required: false
-        default: 30
         example: 15.5
     output:
       sandbox_suspicious_list_resp:
@@ -1428,14 +1418,12 @@ actions:
         type: boolean
         description: If script should wait until the task is finished before returning the result (enabled by default)
         required: true
-        default: true
         example: true
       poll_time_sec:
         title: Poll Time in Seconds
         type: float
         description: Maximum time to wait for the result to be available
         required: false
-        default: 30
         example: 15.5
     output:
       file:
@@ -1636,8 +1624,8 @@ actions:
     title: Submit URLs to Sandbox
     description: Submits URLs to the sandbox for analysis. You can submit a maximum of 10 URLs per request
     input:
-      urls:
-        title: URLs
+      url:
+        title: URL
         type: "[]string"
         description: URL(s) to be submitted, formated as bracket array separated by comma
         required: true
