--- a/plugins/trendmicro_visionone/.dockerignore
+++ b/plugins/trendmicro_visionone/.dockerignore
@@ -1,9 +1,9 @@
-unit_test/**/*
-unit_test
+#unit_test/**/*
+#unit_test
 examples/**/*
 examples
 tests
 tests/**/*
-**/*.json
+#**/*.json
 **/*.tar
 **/*.gz
