--- a/plugins/trendmicro_visionone/Dockerfile
+++ b/plugins/trendmicro_visionone/Dockerfile
@@ -21,9 +21,9 @@ RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 RUN python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
-USER nobody
+USER root
 
 # Uncomment next 2 lines for unit testing 
 # ENTRYPOINT ["/bin/sh"]
-# CMD ["-c", "/usr/local/bin/python /app/__init__.py"]
+# ENV PYTHONPATH="/python/src:${PYTHONPATH}"
 ENTRYPOINT ["/usr/local/bin/icon_trendmicro_visionone"]
