--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -10,6 +10,10 @@ vendor: rapid7
 support: rapid7
 status: []
 cloud_ready: true
+sdk:
+  type: full
+  version: 5
+  user: nobody
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/rapid7_insight_agent
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
